--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head><meta name="base:app_id" content="694724a8d77c069a945be332" />
     <title>Basecamp25 App</title>
   </head>
   <body>
